Fix status selector overlapping and flash on load

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+[x-cloak] { display: none !important; }
+
 /* Intro.js Customization */
 .introjs-tooltip {
     font-family: 'Montserrat', sans-serif !important;
